--- a/style.css
+++ b/style.css
@@ -9,7 +9,7 @@ body {
 }
 
 .banner {
-    background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.3)), url(Images/Chat-chien.jpg);
+    background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.3)), url(/Images/Chat-chien.jpg);
     background-position: center;
     background-size: cover;
     background-attachment: fixed;
